--- a/scss/molecules/_layout.scss
+++ b/scss/molecules/_layout.scss
@@ -6,6 +6,8 @@
 	ul.sponsors, ul.social-feed{
 		li{
 			@include column(1/3,$cycle:3);
+			margin-bottom: 3%;
+			line-height: 0;
 			@include breakpoint($bp-med){
 				@include column(1/6,$cycle:6,$uncycle:3);
 			}
@@ -15,7 +17,7 @@
 			}
 		}
 	}
-	ul.social-links{
+	ul.social-links{	
 		@include center(320px);
 	}
 	h2.social{
